--- a/Styles.css
+++ b/Styles.css
@@ -82,3 +82,21 @@ button:hover {
     background-color: #388E3C; /* Darker green on hover */
     transform: scale(1.05); /* Added scale effect on hover */
 }
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: black; /* Change to your desired color */
+    }
+}
